Spacing fix for images and scrollToTop on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -633,7 +633,7 @@ i {
         float: left;
     }
     #scrollTop {
-        bottom: 50.5px; 
+        bottom: 57.5px; 
     }
 }
 
